# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2013-08-22 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add cloudi_service:request_info_key_value_new/1
    * Fix service requests that only provide ResponseInfo
    * Add support for any methods to cloudi_service_http_cowboy
    * Add proper iodata handling in ResponseInfo HTTP header values to
      cloudi_service_http_cowboy
    * Fix cloudi_service_map_reduce failure result

2013-08-21 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix SSL bug in cloudi_service_http_cowboy
    * Fix process kill handling, for delayed cleanup of dead services

2013-08-17 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Allow cloudi_service_map_reduce to use Erlang applications named the
      same as the map reduce module

2013-08-15 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add set_x_forwarded_for as a configuration parameter for
      cloudi_service_http_cowboy
    * Switch the argument order on cloudi_service:service_name_parse/2 to
      match the cloudi_service_handle_request/11 argument order

2013-08-14 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add content_types_accepted as a configuration parameter for
      cloudi_service_http_cowboy
    * Add "status" key usage from ResponseInfo within
      cloudi_service_http_cowboy

2013-08-13 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Change the CloudI Service API services_add function to return the
      newly created service_ids
    * Add status_code_timeout as a configuration parameter for
      cloudi_service_http_cowboy

2013-08-09 Michael Truog   <mjtruog [at] gmail (dot) com>

    * CloudI version 1.2.5 (beta) released

2013-08-06 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Provide a readable format for the CloudI Service API output of
      services and services_search when returning a service's service options
